[package]
name = "derive-ops"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Derives for componetwise opperations"
repository = "https://github.com/abss-witch/derive-ops/"
keywords = ["math", "derive", "macro", "ops"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.80"
quote = "1.0.36"
syn = "2.0.58"
